--- a/movie_review_website/flask_app/templates/new_film.html
+++ b/movie_review_website/flask_app/templates/new_film.html
@@ -17,9 +17,9 @@
         </div>
 
     </nav>
-    <form action="/create/recipe" method="post" class="col-11 p-4 my-4 bg-dark text-light mx-auto">
-        <h2 class="text-primary">Add a New Recipe</h2>
-        {% with messages = get_flashed_messages(category_filter=['recipe']) %}
+    <form action="/create/film" method="post" class="col-11 p-4 my-4 bg-dark text-light mx-auto">
+        <h2 class="text-primary">Add a New Film</h2>
+        {% with messages = get_flashed_messages(category_filter=['film']) %}
             {% if messages %}
             <div class="alert alert-danger" role="alert">
                 <strong>Flash AHHHHHHH!!!!</strong>
