--- a/movie_review_website/flask_app/templates/show_film.html
+++ b/movie_review_website/flask_app/templates/show_film.html
@@ -25,7 +25,7 @@
 <div class="card col-10 mx-auto my-5 bg-dark text-light">
     <div class="card-body">
         <h3 class="card-title text-primary">Year: {{ film.year }}</h3>
-        <p class="card-text">Description:  {{ film.description }}</p>
+        <p class="card-text">Description:  {{ film.info }}</p>
         <h3>Seller: {{film.user}}</h3>
         <a href="/delete/film/{{film.id}}" class="btn btn-info">Film</a>
     </div>
